<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">Messenger</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="accountAlreadyExists">Already have an account?</string>
    <string name="login">Login</string>
    <string name="noAccountExists">Don\'t have an Account? Register here!</string>
    <string name="selectPhoto">Select Photo</string>
    <string name="new_message">New Message</string>
    <string name="log_out">Log Out</string>
    <string name="messages">Messages</string>
    <string name="select_user">Select User</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
</resources>
